correction z-index heart

--- a/scss/component/_button.scss
+++ b/scss/component/_button.scss
@@ -50,6 +50,7 @@ button{
 .btn-like{
     position: relative;
     margin-left: auto;
+    z-index: 1;
     width: 23px;
     height: 20px;
     .full{
